products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: products-service:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  type: NodePort
  selector:
    app: products
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30005
