products-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: products.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 5000
